welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:33: error: not found: value fairev
  fairev(Color.	GREEN)
  ^